--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ numpy==1.16.4
 oauthlib==3.1.0
 opt-einsum==3.1.0
 pandas==0.24.2
+parmap==1.5.2
 pomegranate==0.10.0
 protobuf==3.8.0
 pyasn1==0.4.8
@@ -43,9 +44,9 @@ scipy==1.4.1
 Send2Trash==1.5.0
 six==1.12.0
 sklearn==0.0
-tensorboard==2.1.0
-tensorflow==2.1.0
-tensorflow-estimator==2.1.0
+tensorboard==2.0.2
+tensorflow==2.0.1
+tensorflow-estimator==2.0.1
 termcolor==1.1.0
 tqdm==4.32.2
 urllib3==1.25.7
